# pcap2tensor

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom_features.py  quickstart.py
src/pcap2tensor/: __init__.py  cli.py  extractor.py  features.py  presets.py  windowing.py
src/pcapml/: __init__.py  cli.py  extractor.py  features.py  presets.py
tests/: test_extractor.py  test_features.py  test_presets.py  test_windowing.py
